Launchpad automatic translations update.

--- a/po/stellarium-skycultures/ga.po
+++ b/po/stellarium-skycultures/ga.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2011-11-03 05:38+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-20 08:49+0000\n"
+"Last-Translator: Weisson Ang <avgserviceprovider@gmail.com>\n"
 "Language-Team: Irish <ga@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:54+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-01-21 04:39+0000\n"
+"X-Generator: Launchpad (build 16430)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -27,23 +27,23 @@ msgstr "Aeróga"
 
 #: nebulae/default/ngc2000names.dat:115
 msgid "Barnard's galaxy"
-msgstr "Réaltra Bharnaird"
+msgstr ""
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Réaltra Lapa Bear ar"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
-msgstr ""
+msgstr "Braisle Beehive"
 
 #: nebulae/default/ngc2000names.dat:118
 msgid "Black-eye galaxy"
-msgstr ""
+msgstr "Black-eye réaltra"
 
 #: nebulae/default/ngc2000names.dat:119
 msgid "Blinking planetary"
-msgstr ""
+msgstr "Optional Blinking"
 
 #: nebulae/default/ngc2000names.dat:120
 msgid "Blue Snowball"
@@ -51,7 +51,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:121
 msgid "Blue planetary"
-msgstr ""
+msgstr "Blue pláinéadach"
 
 #: nebulae/default/ngc2000names.dat:122
 msgid "Bode's nebulae"
@@ -59,7 +59,7 @@ msgstr "Réaltnéal Bhode"
 
 #: nebulae/default/ngc2000names.dat:123
 msgid "Cigar Galaxy"
-msgstr ""
+msgstr "Réaltra todóg"
 
 #: nebulae/default/ngc2000names.dat:124 nebulae/default/ngc2000names.dat:125
 #: nebulae/default/ngc2000names.dat:126 nebulae/default/ngc2000names.dat:127
@@ -68,50 +68,50 @@ msgstr "Bosca"
 
 #: nebulae/default/ngc2000names.dat:128
 msgid "Box nebula"
-msgstr ""
+msgstr "Réaltnéal Bosca"
 
 #: nebulae/default/ngc2000names.dat:129
 msgid "Bubble nebula"
-msgstr ""
+msgstr "Réaltnéal Bubble"
 
 #: nebulae/default/ngc2000names.dat:130
 msgid "Bug nebula"
-msgstr ""
+msgstr "Réaltnéal Bug"
 
 #: nebulae/default/ngc2000names.dat:131
 msgid "Butterfly cluster"
-msgstr ""
+msgstr "Féileacán braisle"
 
 #: nebulae/default/ngc2000names.dat:132
 msgid "Butterfly nebula"
-msgstr ""
+msgstr "Réaltnéal Féileacán"
 
 #: nebulae/default/ngc2000names.dat:133
 msgid "California nebula"
-msgstr ""
+msgstr "California réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "Centaurus A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
-msgstr ""
+msgstr "Crann Nollag braisle"
 
 #: nebulae/default/ngc2000names.dat:136
 msgid "Cocoon nebula"
-msgstr ""
+msgstr "Réaltnéal cocún"
 
 #: nebulae/default/ngc2000names.dat:137
 msgid "Cone nebula"
-msgstr ""
+msgstr "Réaltnéal Cón"
 
 #: nebulae/default/ngc2000names.dat:138 nebulae/default/ngc2000names.dat:139
 #: nebulae/default/ngc2000names.dat:140 nebulae/default/ngc2000names.dat:141
 #: nebulae/default/ngc2000names.dat:142 nebulae/default/ngc2000names.dat:143
 #: nebulae/default/ngc2000names.dat:144
 msgid "Copeland's Septet"
-msgstr ""
+msgstr "Septet Copeland ar"
 
 #: nebulae/default/ngc2000names.dat:145
 msgid "Crab nebula"
@@ -119,27 +119,27 @@ msgstr "Réaltnéal an Phortáin"
 
 #: nebulae/default/ngc2000names.dat:146
 msgid "Crescent nebula"
-msgstr ""
+msgstr "Réaltnéal Corrán"
 
 #: nebulae/default/ngc2000names.dat:147 nebulae/default/ngc2000names.dat:148
 msgid "Double cluster"
-msgstr ""
+msgstr "Braisle Double"
 
 #: nebulae/default/ngc2000names.dat:149
 msgid "Dumbbell nebula"
-msgstr ""
+msgstr "Dumbbell réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:150
 msgid "Eagle nebula"
-msgstr ""
+msgstr "Eagle réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:151
 msgid "Eight-burst planetary"
-msgstr ""
+msgstr "Ocht-pléasctha optional"
 
 #: nebulae/default/ngc2000names.dat:152
 msgid "Eskimo nebula"
-msgstr ""
+msgstr "Eskimo réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:153 nebulae/default/ngc2000names.dat:154
 msgid "The Eyes"
