--- a/po/stellarium/ga.po
+++ b/po/stellarium/ga.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2012-01-05 15:09+0000\n"
+"PO-Revision-Date: 2013-01-20 18:23+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Irish <ga@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:43+0000\n"
+"X-Launchpad-Export-Date: 2013-01-21 04:38+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -203,7 +203,7 @@ msgstr ""
 #: src/core/modules/StarWrapper.cpp:52 src/core/modules/StarWrapper.cpp:122
 #: src/translations.h:151
 msgid "star"
-msgstr ""
+msgstr "réalta"
 
 #: src/core/modules/StarWrapper.cpp:57
 #, qt-format
@@ -1195,17 +1195,17 @@ msgstr "W"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr ""
+msgstr "pláinéad"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
 msgid "comet"
-msgstr ""
+msgstr "cóiméad"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:157
 msgid "asteroid"
-msgstr ""
+msgstr "astaróideach"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
@@ -1235,7 +1235,7 @@ msgstr "Éigipteach"
 
 #: src/translations.h:169
 msgid "Inuit"
-msgstr ""
+msgstr "Ionúiteach"
 
 #: src/translations.h:170
 msgid "Korean"
@@ -1243,19 +1243,19 @@ msgstr "Cóiréach"
 
 #: src/translations.h:171
 msgid "Lakota"
-msgstr ""
+msgstr "Lakota"
 
 #: src/translations.h:172
 msgid "Maori"
-msgstr ""
+msgstr "Maorach"
 
 #: src/translations.h:173
 msgid "Navajo"
-msgstr ""
+msgstr "Navachóis"
 
 #: src/translations.h:174
 msgid "Norse"
-msgstr ""
+msgstr "Lochlannach"
 
 #: src/translations.h:175
 msgid "Polynesian"
@@ -1267,7 +1267,7 @@ msgstr "Sáimis"
 
 #: src/translations.h:177
 msgid "Tupi-Guarani"
-msgstr ""
+msgstr "Tupi-Guarani"
 
 #: src/translations.h:178
 msgid "Western"
@@ -1506,15 +1506,15 @@ msgstr ""
 
 #: src/translations.h:272
 msgid "United Arab Emirates"
-msgstr ""
+msgstr "Aontas na nÉimíríochtaí Arabacha"
 
 #: src/translations.h:273
 msgid "Afghanistan"
-msgstr ""
+msgstr "An Afganastáin"
 
 #: src/translations.h:274
 msgid "Antigua and Barbuda"
-msgstr ""
+msgstr "Antigua agus Barbúda"
 
 #: src/translations.h:275
 msgid "Anguilla"
@@ -1526,23 +1526,23 @@ msgstr ""
 
 #: src/translations.h:277
 msgid "Armenia"
-msgstr ""
+msgstr "An Airméin"
 
 #: src/translations.h:278
 msgid "Netherlands Antilles"
-msgstr ""
+msgstr "Aintillí na hIsiltíre"
 
 #: src/translations.h:279
 msgid "Angola"
-msgstr ""
+msgstr "Angóla"
 
 #: src/translations.h:280
 msgid "Antarctica"
-msgstr ""
+msgstr "An Antartaice"
 
 #: src/translations.h:281
 msgid "Argentina"
-msgstr ""
+msgstr "An Airgintín"
 
 #: src/translations.h:282
 msgid "American Samoa"
@@ -1550,11 +1550,11 @@ msgstr ""
 
 #: src/translations.h:283
 msgid "Austria"
-msgstr ""
+msgstr "An Ostair"
 
 #: src/translations.h:284
 msgid "Australia"
-msgstr ""
+msgstr "An Astráil"
 
 #: src/translations.h:285
 msgid "Aruba"
@@ -1570,31 +1570,31 @@ msgstr ""
 
 #: src/translations.h:288
 msgid "Barbados"
-msgstr ""
+msgstr "Barbadós"
 
 #: src/translations.h:289
 msgid "Bangladesh"
-msgstr ""
+msgstr "An Bhanglaidéis"
 
 #: src/translations.h:290
 msgid "Belgium"
-msgstr ""
+msgstr "An Bheilg"
 
 #: src/translations.h:291
 msgid "Burkina Faso"
-msgstr ""
+msgstr "Buircíne Fasó"
 
 #: src/translations.h:292
 msgid "Bulgaria"
-msgstr ""
+msgstr "An Bhulgáir"
 
 #: src/translations.h:293
 msgid "Bahrain"
-msgstr ""
+msgstr "An Bhairéin"
 
 #: src/translations.h:294
 msgid "Burundi"
-msgstr ""
+msgstr "An Bhurúin"
 
 #: src/translations.h:295
 msgid "Benin"
@@ -1602,7 +1602,7 @@ msgstr ""
 
 #: src/translations.h:296
 msgid "Bermuda"
-msgstr ""
+msgstr "Beirmiúda"
 
 #: src/translations.h:297
 msgid "Brunei Darussalam"
@@ -1610,15 +1610,15 @@ msgstr ""
 
 #: src/translations.h:298
 msgid "Bolivia"
-msgstr ""
+msgstr "An Bholaiv"
 
 #: src/translations.h:299
 msgid "Brazil"
-msgstr ""
+msgstr "An Bhrasaíl"
 
 #: src/translations.h:300
 msgid "Bahamas"
-msgstr ""
+msgstr "Na Bahámaí"
 
 #: src/translations.h:301
 msgid "Bhutan"
@@ -1630,7 +1630,7 @@ msgstr ""
 
 #: src/translations.h:303
 msgid "Botswana"
-msgstr ""
+msgstr "An Bhotsuáin"
 
 #: src/translations.h:304
 msgid "Belarus"
@@ -1638,11 +1638,11 @@ msgstr ""
 
 #: src/translations.h:305
 msgid "Belize"
-msgstr ""
+msgstr "An Bheilís"
 
 #: src/translations.h:306
 msgid "Canada"
-msgstr ""
+msgstr "Ceanada"
 
 #: src/translations.h:307
 msgid "Cocos Islands"
@@ -1654,7 +1654,7 @@ msgstr ""
 
 #: src/translations.h:309
 msgid "Central African Republic"
-msgstr ""
+msgstr "Poblacht na hAfraice Láir"
 
 #: src/translations.h:310
 msgid "Republic of the Congo"
@@ -1662,7 +1662,7 @@ msgstr ""
 
 #: src/translations.h:311
 msgid "Switzerland"
-msgstr ""
+msgstr "An Eilvéis"
 
 #: src/translations.h:312
 msgid "Cote d'Ivoire"
@@ -1674,23 +1674,23 @@ msgstr ""
 
 #: src/translations.h:314
 msgid "Chile"
-msgstr ""
+msgstr "An tSile"
 
 #: src/translations.h:315
 msgid "Cameroon"
-msgstr ""
+msgstr "Camarún"
 
 #: src/translations.h:316
 msgid "China"
-msgstr ""
+msgstr "An tSín"
 
 #: src/translations.h:317
 msgid "Colombia"
-msgstr ""
+msgstr "An Cholóim"
 
 #: src/translations.h:318
 msgid "Costa Rica"
-msgstr ""
+msgstr "Cósta Ríce"
 
 #: src/translations.h:319
 msgid "Serbia and Montenegro"
@@ -1698,35 +1698,35 @@ msgstr ""
 
 #: src/translations.h:320
 msgid "Cuba"
-msgstr ""
+msgstr "Cúba"
 
 #: src/translations.h:321
 msgid "Cape Verde"
-msgstr ""
+msgstr "Rinn Verde"
 
 #: src/translations.h:322
 msgid "Christmas Island"
-msgstr ""
+msgstr "Oileán na Nollag"
 
 #: src/translations.h:323
 msgid "Cyprus"
-msgstr ""
+msgstr "An Chipir"
 
 #: src/translations.h:324
 msgid "Czech Republic"
-msgstr ""
+msgstr "Poblacht na Seice"
 
 #: src/translations.h:325
 msgid "Germany"
-msgstr ""
+msgstr "An Ghearmáin"
 
 #: src/translations.h:326
 msgid "Djibouti"
-msgstr ""
+msgstr "Djibouti"
 
 #: src/translations.h:327
 msgid "Denmark"
-msgstr ""
+msgstr "An Danmhairg"
 
 #: src/translations.h:328
 msgid "Dominica"
@@ -1734,23 +1734,23 @@ msgstr ""
 
 #: src/translations.h:329
 msgid "Dominican Republic"
-msgstr ""
+msgstr "An Phoblacht Dhoiminiceach"
 
 #: src/translations.h:330
 msgid "Algeria"
-msgstr ""
+msgstr "An Ailgéir"
 
 #: src/translations.h:331
 msgid "Ecuador"
-msgstr ""
+msgstr "Eacuadór"
 
 #: src/translations.h:332
 msgid "Estonia"
-msgstr ""
+msgstr "An Eastóin"
 
 #: src/translations.h:333
 msgid "Egypt"
-msgstr ""
+msgstr "An Éigipt"
 
 #: src/translations.h:334
 msgid "Western Sahara"
@@ -1758,43 +1758,43 @@ msgstr ""
 
 #: src/translations.h:335
 msgid "Eritrea"
-msgstr ""
+msgstr "An Eiritré"
 
 #: src/translations.h:336
 msgid "Spain"
-msgstr ""
+msgstr "An Spáinn"
 
 #: src/translations.h:337
 msgid "Ethiopia"
-msgstr ""
+msgstr "An Aetóip"
 
 #: src/translations.h:338
 msgid "Finland"
-msgstr ""
+msgstr "An Fhionlainn"
 
 #: src/translations.h:339
 msgid "Fiji"
-msgstr ""
+msgstr "Fidsí"
 
 #: src/translations.h:340
 msgid "Falkland Islands"
-msgstr ""
+msgstr "Oileáin Fháclainne"
 
 #: src/translations.h:341
 msgid "Micronesia"
-msgstr ""
+msgstr "An Mhicrinéis"
 
 #: src/translations.h:342
 msgid "Faroe Islands"
-msgstr ""
+msgstr "Oileáin Fharó"
 
 #: src/translations.h:343
 msgid "France"
-msgstr ""
+msgstr "An Fhrainc"
 
 #: src/translations.h:344
 msgid "Gabon"
-msgstr ""
+msgstr "An Ghabúin"
 
 #: src/translations.h:345
 msgid "United Kingdom"
@@ -1806,43 +1806,43 @@ msgstr ""
 
 #: src/translations.h:347
 msgid "Georgia"
-msgstr ""
+msgstr "Georgia"
 
 #: src/translations.h:348
 msgid "French Guiana"
-msgstr ""
+msgstr "Guáin na Fraince"
 
 #: src/translations.h:349
 msgid "Ghana"
-msgstr ""
+msgstr "Gána"
 
 #: src/translations.h:350
 msgid "Gibraltar"
-msgstr ""
+msgstr "Giobráltar"
 
 #: src/translations.h:351
 msgid "Greenland"
-msgstr ""
+msgstr "An Ghraonlainn"
 
 #: src/translations.h:352
 msgid "Gambia"
-msgstr ""
+msgstr "An Ghaimbia"
 
 #: src/translations.h:353
 msgid "Guinea"
-msgstr ""
+msgstr "An Ghuine"
 
 #: src/translations.h:354
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Guadalúip"
 
 #: src/translations.h:355
 msgid "Equatorial Guinea"
-msgstr ""
+msgstr "An Ghuine Mheánchiorclach"
 
 #: src/translations.h:356
 msgid "Greece"
-msgstr ""
+msgstr "An Ghréig"
 
 #: src/translations.h:357
 msgid "South Georgia and the South Sandwich Islands"
@@ -1850,11 +1850,11 @@ msgstr ""
 
 #: src/translations.h:358
 msgid "Guatemala"
-msgstr ""
+msgstr "Guatamala"
 
 #: src/translations.h:359
 msgid "Guam"
-msgstr ""
+msgstr "Guam"
 
 #: src/translations.h:360
 msgid "Guinea-Bissau"
@@ -1862,11 +1862,11 @@ msgstr ""
 
 #: src/translations.h:361
 msgid "Guyana"
-msgstr ""
+msgstr "An Ghuáin"
 
 #: src/translations.h:362
 msgid "Hong Kong"
-msgstr ""
+msgstr "Hong Cong"
 
 #: src/translations.h:363
 msgid "Heard Island and McDonald Islands"
@@ -1874,35 +1874,35 @@ msgstr ""
 
 #: src/translations.h:364
 msgid "Honduras"
-msgstr ""
+msgstr "Hondúras"
 
 #: src/translations.h:365
 msgid "Croatia"
-msgstr ""
+msgstr "An Chróit"
 
 #: src/translations.h:366
 msgid "Haiti"
-msgstr ""
+msgstr "Háítí"
 
 #: src/translations.h:367
 msgid "Hungary"
-msgstr ""
+msgstr "An Ungáir"
 
 #: src/translations.h:368
 msgid "Indonesia"
-msgstr ""
+msgstr "An Indinéis"
 
 #: src/translations.h:369
 msgid "Ireland"
-msgstr ""
+msgstr "Éire"
 
 #: src/translations.h:370
 msgid "Israel"
-msgstr ""
+msgstr "Iosrael"
 
 #: src/translations.h:371
 msgid "India"
-msgstr ""
+msgstr "An India"
 
 #: src/translations.h:372
 msgid "British Indian Ocean Territory"
@@ -1910,35 +1910,35 @@ msgstr ""
 
 #: src/translations.h:373
 msgid "Iraq"
-msgstr ""
+msgstr "An Iaráic"
 
 #: src/translations.h:374
 msgid "Iran"
-msgstr ""
+msgstr "An Iaráin"
 
 #: src/translations.h:375
 msgid "Iceland"
-msgstr ""
+msgstr "An Íoslainn"
 
 #: src/translations.h:376
 msgid "Italy"
-msgstr ""
+msgstr "An Iodáil"
 
 #: src/translations.h:377
 msgid "Jamaica"
-msgstr ""
+msgstr "Iamáice"
 
 #: src/translations.h:378
 msgid "Jordan"
-msgstr ""
+msgstr "An Iordáin"
 
 #: src/translations.h:379
 msgid "Japan"
-msgstr ""
+msgstr "An tSeapáin"
 
 #: src/translations.h:380
 msgid "Kenya"
-msgstr ""
+msgstr "An Chéinia"
 
 #: src/translations.h:381
 msgid "Kyrgyzstan"
@@ -1950,7 +1950,7 @@ msgstr ""
 
 #: src/translations.h:383
 msgid "Kiribati"
-msgstr ""
+msgstr "Cireabaití"
 
 #: src/translations.h:384
 msgid "Comoros"
@@ -1970,15 +1970,15 @@ msgstr ""
 
 #: src/translations.h:388
 msgid "Kuwait"
-msgstr ""
+msgstr "An Chuáit"
 
 #: src/translations.h:389
 msgid "Cayman Islands"
-msgstr ""
+msgstr "Oileáin Cayman"
 
 #: src/translations.h:390
 msgid "Kazakhstan"
-msgstr ""
+msgstr "An Chasacstáin"
 
 #: src/translations.h:391
 msgid "Lao"
@@ -1986,7 +1986,7 @@ msgstr ""
 
 #: src/translations.h:392
 msgid "Lebanon"
-msgstr ""
+msgstr "Lebanon"
 
 #: src/translations.h:393
 msgid "Saint Lucia"
@@ -1998,27 +1998,27 @@ msgstr ""
 
 #: src/translations.h:395
 msgid "Sri Lanka"
-msgstr ""
+msgstr "Srí Lanca"
 
 #: src/translations.h:396
 msgid "Liberia"
-msgstr ""
+msgstr "An Libéir"
 
 #: src/translations.h:397
 msgid "Lesotho"
-msgstr ""
+msgstr "Leosóta"
 
 #: src/translations.h:398
 msgid "Lithuania"
-msgstr ""
+msgstr "An Liotuáin"
 
 #: src/translations.h:399
 msgid "Luxembourg"
-msgstr ""
+msgstr "Lucsamburg"
 
 #: src/translations.h:400
 msgid "Latvia"
-msgstr ""
+msgstr "An Laitvia"
 
 #: src/translations.h:401
 msgid "Libyan Arab Jamahiriya"
@@ -2026,11 +2026,11 @@ msgstr ""
 
 #: src/translations.h:402
 msgid "Morocco"
-msgstr ""
+msgstr "Maracó"
 
 #: src/translations.h:403
 msgid "Monaco"
-msgstr ""
+msgstr "Monacó"
 
 #: src/translations.h:404
 msgid "Moldova"
@@ -2038,23 +2038,23 @@ msgstr ""
 
 #: src/translations.h:405
 msgid "Madagascar"
-msgstr ""
+msgstr "Madagascar"
 
 #: src/translations.h:406
 msgid "Marshall Islands"
-msgstr ""
+msgstr "Oileáin Marshall"
 
 #: src/translations.h:407
 msgid "Macedonia"
-msgstr ""
+msgstr "An Mhacadóin"
 
 #: src/translations.h:408
 msgid "Mali"
-msgstr ""
+msgstr "Mailí"
 
 #: src/translations.h:409
 msgid "Myanmar"
-msgstr ""
+msgstr "Maenmar"
 
 #: src/translations.h:410
 msgid "Mongolia"
@@ -2070,11 +2070,11 @@ msgstr ""
 
 #: src/translations.h:413
 msgid "Martinique"
-msgstr ""
+msgstr "Martainíc"
 
 #: src/translations.h:414
 msgid "Mauritania"
-msgstr ""
+msgstr "An Mháratáin"
 
 #: src/translations.h:415
 msgid "Montserrat"
@@ -2082,43 +2082,43 @@ msgstr ""
 
 #: src/translations.h:416
 msgid "Malta"
-msgstr ""
+msgstr "Málta"
 
 #: src/translations.h:417
 msgid "Mauritius"
-msgstr ""
+msgstr "Oileán Mhuirís"
 
 #: src/translations.h:418
 msgid "Maldives"
-msgstr ""
+msgstr "Oileáin Mhaildíve"
 
 #: src/translations.h:419
 msgid "Malawi"
-msgstr ""
+msgstr "An Mhaláiv"
 
 #: src/translations.h:420
 msgid "Mexico"
-msgstr ""
+msgstr "Meicsiceo"
 
 #: src/translations.h:421
 msgid "Malaysia"
-msgstr ""
+msgstr "An Mhalaeisia"
 
 #: src/translations.h:422
 msgid "Mozambique"
-msgstr ""
+msgstr "Mósaimbíc"
 
 #: src/translations.h:423
 msgid "Namibia"
-msgstr ""
+msgstr "An Namaib"
 
 #: src/translations.h:424
 msgid "New Caledonia"
-msgstr ""
+msgstr "An Nua-Chaladóin"
 
 #: src/translations.h:425
 msgid "Niger"
-msgstr ""
+msgstr "An Nígir"
 
 #: src/translations.h:426
 msgid "Norfolk Island"
@@ -2126,23 +2126,23 @@ msgstr ""
 
 #: src/translations.h:427
 msgid "Nigeria"
-msgstr ""
+msgstr "An Nigéir"
 
 #: src/translations.h:428
 msgid "Nicaragua"
-msgstr ""
+msgstr "Nicearagua"
 
 #: src/translations.h:429
 msgid "Netherlands"
-msgstr ""
+msgstr "An Ísiltír"
 
 #: src/translations.h:430
 msgid "Norway"
-msgstr ""
+msgstr "An Iorua"
 
 #: src/translations.h:431
 msgid "Nepal"
-msgstr ""
+msgstr "Neipeal"
 
 #: src/translations.h:432
 msgid "Nauru"
@@ -2154,7 +2154,7 @@ msgstr ""
 
 #: src/translations.h:434
 msgid "New Zealand"
-msgstr ""
+msgstr "An Nua-Shéalainn"
 
 #: src/translations.h:435
 msgid "Oman"
@@ -2162,31 +2162,31 @@ msgstr ""
 
 #: src/translations.h:436
 msgid "Panama"
-msgstr ""
+msgstr "Panama"
 
 #: src/translations.h:437
 msgid "Peru"
-msgstr ""
+msgstr "Peiriú"
 
 #: src/translations.h:438
 msgid "French Polynesia"
-msgstr ""
+msgstr "Polainéis na Fraince"
 
 #: src/translations.h:439
 msgid "Papua New Guinea"
-msgstr ""
+msgstr "Nua-Ghuine Phapua"
 
 #: src/translations.h:440
 msgid "Philippines"
-msgstr ""
+msgstr "Na hOileáin Fhilipíneacha"
 
 #: src/translations.h:441
 msgid "Pakistan"
-msgstr ""
+msgstr "An Phacastáin"
 
 #: src/translations.h:442
 msgid "Poland"
-msgstr ""
+msgstr "An Pholainn"
 
 #: src/translations.h:443
 msgid "Saint Pierre and Miquelon"
@@ -2198,7 +2198,7 @@ msgstr ""
 
 #: src/translations.h:445
 msgid "Puerto Rico"
-msgstr ""
+msgstr "Portó Ríce"
 
 #: src/translations.h:446
 msgid "Palestinian Territories"
@@ -2206,7 +2206,7 @@ msgstr ""
 
 #: src/translations.h:447
 msgid "Portugal"
-msgstr ""
+msgstr "An Phortaingéil"
 
 #: src/translations.h:448
 msgid "Palau"
