--- a/po/stellarium-skycultures/ga.po
+++ b/po/stellarium-skycultures/ga.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-20 08:49+0000\n"
+"PO-Revision-Date: 2013-01-21 08:53+0000\n"
 "Last-Translator: Weisson Ang <avgserviceprovider@gmail.com>\n"
 "Language-Team: Irish <ga@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-21 04:39+0000\n"
+"X-Launchpad-Export-Date: 2013-01-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -151,7 +151,7 @@ msgstr "Réaltnéal an Fhiliméid"
 
 #: nebulae/default/ngc2000names.dat:156
 msgid "Flaming Star nebula"
-msgstr ""
+msgstr "Flaming réaltnéal Star"
 
 #: nebulae/default/ngc2000names.dat:157
 msgid "Ghost of Jupiter"
@@ -159,27 +159,27 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:158
 msgid "Great Cluster in Hercules"
-msgstr ""
+msgstr "Cnuasach Breataine i Earcail"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "Andraiméide Réaltra"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
-msgstr ""
+msgstr "Réaltnéal Breataine i Orion"
 
 #: nebulae/default/ngc2000names.dat:161
 msgid "Helix galaxy"
-msgstr ""
+msgstr "Helix réaltra"
 
 #: nebulae/default/ngc2000names.dat:162
 msgid "Helix nebula"
-msgstr ""
+msgstr "Réaltnéal Helix"
 
 #: nebulae/default/ngc2000names.dat:163
 msgid "Hind's variable nebula"
-msgstr ""
+msgstr "Hind Tá réaltnéal athróg"
 
 #: nebulae/default/ngc2000names.dat:164
 msgid "Horsehead nebula"
@@ -231,19 +231,19 @@ msgstr "Na Lucha"
 
 #: nebulae/default/ngc2000names.dat:177 nebulae/default/ngc2000names.dat:178
 msgid "Network nebula"
-msgstr ""
+msgstr "Réaltnéal Líonra"
 
 #: nebulae/default/ngc2000names.dat:179
 msgid "North America nebula"
-msgstr ""
+msgstr "Meiriceá Thuaidh réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:180
 msgid "Omega nebula"
-msgstr ""
+msgstr "Omega réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:181
 msgid "Owl nebula"
-msgstr ""
+msgstr "Owl réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:182
 msgid "Papillon"
@@ -251,15 +251,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:183
 msgid "Pelican nebula"
-msgstr ""
+msgstr "Réaltnéal Pelican"
 
 #: nebulae/default/ngc2000names.dat:184
 msgid "Pin-wheel nebula"
-msgstr ""
+msgstr "PIN-roth réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:185
 msgid "Polarissima Australis"
-msgstr ""
+msgstr "Polarissima Australisstar"
 
 #: nebulae/default/ngc2000names.dat:186
 msgid "Polarissima Borealis"
