--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-11 17:49+0000\n"
+"PO-Revision-Date: 2013-01-21 14:48+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:40+0000\n"
+"X-Launchpad-Export-Date: 2013-01-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 "Language: be\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -6965,13 +6965,15 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:152
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:232
 msgid "Horizon altitude:"
-msgstr ""
+msgstr "Вышыня гарызонту:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
 "Minimum observable altitude (due to mountains, buildings, or just a limited "
 "telescope mount)."
 msgstr ""
+"Найменшая вышыня назіраньня (з-за гор, будынкаў ці абмежаванага мацаваньня "
+"тэлескопа)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Today ephemeris:"
@@ -7149,15 +7151,15 @@ msgstr "Кеґль"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:375
 msgid "Observing conditions"
-msgstr ""
+msgstr "Умовы назіраньня"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:376
 msgid "Horizon altitude: 0 deg."
-msgstr ""
+msgstr "Вышыня гарызонту: 0°"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:377
 msgid "Sun altitude at twilight: 0 deg."
-msgstr ""
+msgstr "Вышыня Сонца на зьмярканьні: 0°"
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "Экватарыяльная сетка"
