--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-10 21:07+0000\n"
-"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
+"PO-Revision-Date: 2013-01-21 09:26+0000\n"
+"Last-Translator: Hendrik Lippek <Unknown>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:42+0000\n"
+"X-Launchpad-Export-Date: 2013-01-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -6981,13 +6981,15 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:152
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:232
 msgid "Horizon altitude:"
-msgstr ""
+msgstr "Horizonthöhe"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
 "Minimum observable altitude (due to mountains, buildings, or just a limited "
 "telescope mount)."
 msgstr ""
+"Minimale Beobachtungshöhe (Aufgrund von Bergen, Gebäuden oder "
+"eingeschränkter Positionierungsmöglichkeit)"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Today ephemeris:"
@@ -7163,15 +7165,15 @@ msgstr "Schriftgröße"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:375
 msgid "Observing conditions"
-msgstr ""
+msgstr "Beobachtungsbedingungen"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:376
 msgid "Horizon altitude: 0 deg."
-msgstr ""
+msgstr "Horizonthöhe: 0°"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:377
 msgid "Sun altitude at twilight: 0 deg."
-msgstr ""
+msgstr "Sonnenhöhe bei Dämmerung: 0°"
 
 #~ msgid "Stars "
 #~ msgstr "Sterne "
