--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-19 21:43+0000\n"
+"PO-Revision-Date: 2013-01-21 05:06+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-20 04:34+0000\n"
+"X-Launchpad-Export-Date: 2013-01-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -6934,7 +6934,7 @@ msgstr "Joidenkin parametrien selityksiä"
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:148
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:225
 msgid "Sun altitude at twilight:"
-msgstr "Auringon korkeus hämärän aikaan:"
+msgstr "Auringon korkeus hämärän päättyessä:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -7147,7 +7147,7 @@ msgstr "Horisontin korkeus: 0 astetta"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:377
 msgid "Sun altitude at twilight: 0 deg."
-msgstr "Auringon korkeus hämärän ja pimeän rajalla: 0 astetta"
+msgstr "Auringon korkeus hämärän päättyessä: 0 astetta"
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "Ekvatoriaaliasteikko"
