--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,13 +18,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-09 12:07+0000\n"
-"Last-Translator: Nicolas Martignoni <Unknown>\n"
+"PO-Revision-Date: 2013-01-21 16:43+0000\n"
+"Last-Translator: François Scholder <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:42+0000\n"
+"X-Launchpad-Export-Date: 2013-01-22 04:44+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -7010,13 +7010,15 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:152
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:232
 msgid "Horizon altitude:"
-msgstr ""
+msgstr "Hauteur d'horizon :"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
 "Minimum observable altitude (due to mountains, buildings, or just a limited "
 "telescope mount)."
 msgstr ""
+"Hauteur minimale observable (en raison de montagnes, bâtiments ou d'une "
+"monture de télescope limitée)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Today ephemeris:"
@@ -7199,15 +7201,15 @@ msgstr "Taille de la police"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:375
 msgid "Observing conditions"
-msgstr ""
+msgstr "Conditions d'observation"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:376
 msgid "Horizon altitude: 0 deg."
-msgstr ""
+msgstr "Hauteur d'horizon : 0 deg."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:377
 msgid "Sun altitude at twilight: 0 deg."
-msgstr ""
+msgstr "Hauteur du Soleil au crépuscule : 0 deg."
 
 #~ msgid "Date & Time"
 #~ msgstr "Date & Heure"
