Launchpad automatic translations update.

--- a/po/stellarium-skycultures/ga.po
+++ b/po/stellarium-skycultures/ga.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-21 08:53+0000\n"
+"PO-Revision-Date: 2013-01-22 09:02+0000\n"
 "Last-Translator: Weisson Ang <avgserviceprovider@gmail.com>\n"
 "Language-Team: Irish <ga@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-22 04:44+0000\n"
-"X-Generator: Launchpad (build 16430)\n"
+"X-Launchpad-Export-Date: 2013-01-23 04:35+0000\n"
+"X-Generator: Launchpad (build 16441)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -183,27 +183,27 @@ msgstr "Hind Tá réaltnéal athróg"
 
 #: nebulae/default/ngc2000names.dat:164
 msgid "Horsehead nebula"
-msgstr ""
+msgstr "HORSEHEAD réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:165
 msgid "Hourglass nebula"
-msgstr ""
+msgstr "Réaltnéal hourglass"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "Réaltnéal athróg Hubble ar"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
-msgstr ""
+msgstr "Jewel Bosca"
 
 #: nebulae/default/ngc2000names.dat:168
 msgid "Lace-work nebula"
-msgstr ""
+msgstr "Lása-obair réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:169
 msgid "Lagoon nebula"
-msgstr ""
+msgstr "Réaltnéal Lagoon"
 
 #: nebulae/default/ngc2000names.dat:170 nebulae/default/ngc2000names.dat:171
 msgid "Little Dumbbell"
@@ -215,7 +215,7 @@ msgstr "An tSeoid Bheag"
 
 #: nebulae/default/ngc2000names.dat:173
 msgid "Maia nebula"
-msgstr ""
+msgstr "Maia réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:174
 msgid "Pleiades"
@@ -271,20 +271,20 @@ msgstr "An Choirceog"
 
 #: nebulae/default/ngc2000names.dat:188
 msgid "Ring nebula in Lyra"
-msgstr ""
+msgstr "Réaltnéal Ring i Lyra"
 
 #: nebulae/default/ngc2000names.dat:189 nebulae/default/ngc2000names.dat:190
 #: nebulae/default/ngc2000names.dat:191 nebulae/default/ngc2000names.dat:192
 msgid "Rosette nebula"
-msgstr ""
+msgstr "Réaltnéal rosette"
 
 #: nebulae/default/ngc2000names.dat:193
 msgid "Saturn nebula"
-msgstr ""
+msgstr "Satarn réaltnéal"
 
 #: nebulae/default/ngc2000names.dat:194
 msgid "Sculptor galaxy"
-msgstr ""
+msgstr "Réaltra dealbhóir"
 
 #: nebulae/default/ngc2000names.dat:195 nebulae/default/ngc2000names.dat:196
 msgid "Siamese Twins"
@@ -292,15 +292,15 @@ msgstr "Cúpla Ceangailte"
 
 #: nebulae/default/ngc2000names.dat:197
 msgid "Sombrero galaxy"
-msgstr ""
+msgstr "Sombrero réaltra"
 
 #: nebulae/default/ngc2000names.dat:198
 msgid "Southern Pleiades"
-msgstr ""
+msgstr "Pleiades an Deiscirt"
 
 #: nebulae/default/ngc2000names.dat:199
 msgid "Spindle galaxy"
-msgstr ""
+msgstr "Réaltra fhearsaid"
 
 #: nebulae/default/ngc2000names.dat:200
 msgid "Star Queen nebula"
