--- a/po/stellarium/hu.po
+++ b/po/stellarium/hu.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: Stellarium 0.10.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-22 21:27+0000\n"
+"PO-Revision-Date: 2013-01-24 17:54+0000\n"
 "Last-Translator: misibacsi <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-23 04:35+0000\n"
-"X-Generator: Launchpad (build 16441)\n"
+"X-Launchpad-Export-Date: 2013-01-25 05:23+0000\n"
+"X-Generator: Launchpad (build 16445)\n"
 "X-Poedit-Language: Hungarian\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -130,12 +130,12 @@ msgstr "Abszolút fényesség: %1"
 #: src/core/modules/Planet.cpp:463
 #, qt-format
 msgid "Ecliptic Topocentric (of date): %1/%2"
-msgstr ""
+msgstr "Topocentrikus ekliptika (aktuális):  %1/%2"
 
 #: src/core/modules/Planet.cpp:464
 #, qt-format
 msgid "Obliquity (of date, for Earth): %1"
-msgstr ""
+msgstr "Ferdeség (aktuális, Föld): %1"
 
 #: src/core/modules/Planet.cpp:474 src/core/modules/MinorPlanet.cpp:235
 #: src/core/modules/Comet.cpp:149
@@ -215,7 +215,7 @@ msgstr "Fényesség: <b>%1</b> (B-V: %2)"
 #: src/core/modules/StarWrapper.cpp:60
 #, qt-format
 msgid "Apparent Magnitude: <b>%1</b> (by extinction)"
-msgstr ""
+msgstr "Látszó magnitúdó <b>%1</b> (kioltással)"
 
 #: src/core/modules/StarWrapper.cpp:120
 msgid "double star"
@@ -224,7 +224,7 @@ msgstr "kettős csillag"
 #: src/core/modules/StarWrapper.cpp:128 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
 msgid "Magnitude: <b>%1</b> (extincted to: <b>%2</b>. B-V: <b>%3</b>)"
-msgstr ""
+msgstr "Magnitódó: <b>%1</b> (kioltva: <b>%2</b>. B-V: <b>%3</b>)"
 
 #: src/core/modules/StarWrapper.cpp:132 plugins/Quasars/src/Quasar.cpp:114
 #, qt-format
@@ -1401,6 +1401,7 @@ msgstr "A Föld és a Jupiter együttállása 2048-ban"
 #: src/translations.h:228
 msgid "3 Transits and 2 Eclipses from Deimos 2027"
 msgstr ""
+"A Deimoszról látható 2027-es háromszori áthaladás és kétszeri fogyatkozás"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:230
@@ -1475,18 +1476,24 @@ msgid ""
 "Due to the quirks in Mercury's orbit and rotation at certain spots the sun "
 "will rise & set 3 different times in one Mercury day."
 msgstr ""
+"A Merkúr sajátos pályája és forgása miatt a Nap bizonyos helyeken napi "
+"háromszor látszik felkelni és lenyugodni."
 
 #: src/translations.h:255
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Scorpio and Sagittarius on April 26, 2017."
 msgstr ""
+"Épp mielőtt a Mars eltakarná a Napot, a Phobosz előkerül. 2017. április 26-"
+"án, a Skorpió és a Nyilas között."
 
 #: src/translations.h:256
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Taurus and Gemini on July 23, 2031."
 msgstr ""
+"Épp mielőtt a Mars eltakarná a Napot, a Phobosz előkerül. 2031. július 23-"
+"án, a Bika és az Ikrek között."
 
 #: src/translations.h:257
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
@@ -1498,6 +1505,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"A Phobosz gyakran van okkultációban a Földdel vagy a Jupiterrel. De "
+"mindkettővel egyszerre ritkán. Egy ilyen esemény 2048. január 23-án lesz. "
+"Tényleges sebességgel mutatva."
 
 #: src/translations.h:259
 msgid ""
@@ -2535,7 +2545,7 @@ msgstr "+1 sziderikus év"
 
 #: src/translations.h:523
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "+1 sziderikus évszázad"
 
 #: src/translations.h:524
 msgid "Add 1 solar day"
@@ -2575,7 +2585,7 @@ msgstr "+1 átlagos tropikus év"
 
 #: src/translations.h:533
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "+1 tropikus évszázad"
 
 #: src/translations.h:534
 msgid "Slow down the script execution rate"
@@ -2647,7 +2657,7 @@ msgstr "-1 sziderikus év"
 
 #: src/translations.h:551
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "-1 sziderikus évszázad"
 
 #: src/translations.h:552
 msgid "Subtract 1 solar day"
@@ -2687,7 +2697,7 @@ msgstr "-1 átlagos tropikus év"
 
 #: src/translations.h:561
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "-1 tropikus évszázad"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:564
@@ -2915,7 +2925,7 @@ msgstr "Megfigyelhetőség beállító ablak"
 
 #: src/translations.h:629
 msgid "Oculars plugin configuration"
-msgstr ""
+msgstr "Okulár plug-in beállításai"
 
 #: src/translations.h:630 plugins/Oculars/src/ui_ocularDialog.h:860
 msgid "Ocular view"
@@ -2931,7 +2941,7 @@ msgstr "okulár menü"
 
 #: src/translations.h:633
 msgid "Image sensor frame"
-msgstr ""
+msgstr "Képérzékelő"
 
 #: src/translations.h:634
 msgid "Telrad sight"
@@ -3001,7 +3011,7 @@ msgstr "Keresőablak"
 
 #: src/translations.h:666
 msgid "Shortcuts window"
-msgstr ""
+msgstr "Rövidítések ablaka"
 
 #: src/translations.h:667
 msgid "Sky and viewing options window"
@@ -3330,11 +3340,11 @@ msgstr "Fényszennyezés"
 
 #: src/ui_viewDialog.h:1139
 msgid "pressure, temperature, extinction coefficient"
-msgstr ""
+msgstr "nyomás, hőmérséklet, kioltás együtthatója"
 
 #: src/ui_viewDialog.h:1141
 msgid "Refraction/Extinction settings..."
-msgstr ""
+msgstr "Visszaverődési/kioltási beállítások"
 
 #: src/ui_viewDialog.h:1142
 msgid "Labels and Markers"
@@ -3599,7 +3609,7 @@ msgstr "További információk 1"
 
 #: src/ui_configurationDialog.h:1009
 msgid "Geocentric equatorial coordinates, equinox of date"
-msgstr ""
+msgstr "Geocentrikus egyenlítői koordináták aktuális napéjegyenlőség"
 
 #: src/ui_configurationDialog.h:1011
 msgid "Right ascension/Declination (of date)"
@@ -4047,27 +4057,27 @@ msgstr ""
 
 #: plugins/Oculars/src/Oculars.cpp:909
 msgid "Toggle &Telrad"
-msgstr ""
+msgstr "&Telrad ki/be"
 
 #: plugins/Oculars/src/Oculars.cpp:919
 msgid "&Previous CCD"
-msgstr ""
+msgstr "&Előző CCD"
 
 #: plugins/Oculars/src/Oculars.cpp:920
 msgid "&Next CCD"
-msgstr ""
+msgstr "&Következő CCD"
 
 #: plugins/Oculars/src/Oculars.cpp:921
 msgid "&Select CCD"
-msgstr ""
+msgstr "CCD kivála&sztása"
 
 #: plugins/Oculars/src/Oculars.cpp:943
 msgid "&Rotate CCD"
-msgstr ""
+msgstr "CCD fo&rgatása"
 
 #: plugins/Oculars/src/Oculars.cpp:975
 msgid "&Reset rotation"
-msgstr ""
+msgstr "Forgatás &reszet"
 
 #: plugins/Oculars/src/Oculars.cpp:1451
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:479
@@ -4140,15 +4150,15 @@ msgstr "Szenzor #%1: %2"
 
 #: plugins/Oculars/src/Oculars.cpp:1739
 msgid "&Telescope"
-msgstr ""
+msgstr "&Távcső"
 
 #: plugins/Oculars/src/Oculars.cpp:1740
 msgid "&Previous telescope"
-msgstr ""
+msgstr "&Előző távcső"
 
 #: plugins/Oculars/src/Oculars.cpp:1741
 msgid "&Next telescope"
-msgstr ""
+msgstr "&Következő távcső"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:186
 msgid "Previous ocular"
@@ -4160,11 +4170,11 @@ msgstr "Következő okulár"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:198
 msgid "Previous CCD frame"
-msgstr ""
+msgstr "Előző CCD kerete"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:204
 msgid "Next CCD frame"
-msgstr ""
+msgstr "Következő CCD kerete"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:210
 msgid "Previous telescope"
@@ -4217,23 +4227,23 @@ msgstr "Elforgatás: %1"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:714
 msgid "Magnification provided by these binoculars"
-msgstr ""
+msgstr "Binokulárok nagyítása"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:715
 msgid "Actual field of view provided by these binoculars"
-msgstr ""
+msgstr "Binokulárok aktuális látómezeje"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:723
 msgid "Magnification provided by this ocular/telescope combination"
-msgstr ""
+msgstr "Okulár és távcső kombinációjának nagyítása"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:724
 msgid "Actual field of view provided by this ocular/telescope combination"
-msgstr ""
+msgstr "Okulár és távcső kombinációjának látómezeje"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:421
 msgid "Oculars Plug-in"
-msgstr ""
+msgstr "Okulár plug-in"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:422
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:287
@@ -4256,6 +4266,9 @@ msgid ""
 "and telescopes, as well as CCD Sensors.  Your first time running the app "
 "will populate some samples to get your started."
 msgstr ""
+"A program azt mutatja meg, amit egy okuláron keresztül lehet látni. A "
+"beállításoknál szemlencséket,  távcsöveket és CCD érzékelőket lehet "
+"hozzáadni és módosítani. Első indítás alkalmával mintákat mutat."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:430
 msgid ""
@@ -4349,7 +4362,7 @@ msgstr "Általános"
 #: plugins/Oculars/src/ui_ocularDialog.h:871
 #: plugins/Oculars/src/ui_ocularDialog.h:879
 msgid "Eyepieces"
-msgstr ""
+msgstr "Szemlencsék"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:872
 #: plugins/Oculars/src/ui_ocularDialog.h:881
@@ -4382,7 +4395,7 @@ msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:878
 msgid "Binoculars"
-msgstr ""
+msgstr "Binokulárok"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:880
 #: plugins/Oculars/src/ui_ocularDialog.h:890
@@ -4498,7 +4511,7 @@ msgstr "Magasság (km): %1"
 #: plugins/Satellites/src/Satellite.cpp:263
 #, qt-format
 msgid "SubPoint (Lat./Long.): %1%2/%3%4"
-msgstr ""
+msgstr "Döféspont  (Lat./Long.): %1%2/%3%4"
 
 #. TRANSLATORS: TEME is an Earth-centered inertial coordinate system
 #: plugins/Satellites/src/Satellite.cpp:277
@@ -4706,6 +4719,8 @@ msgid ""
 "If you would like to make a feature request, you can create a bug report, "
 "and set the severity to \"wishlist\"."
 msgstr ""
+"If you would like to make a feature request, you can create a bug report, "
+"and set the severity to \"wishlist\"."
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:349
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:153
@@ -5222,11 +5237,11 @@ msgstr "Távcső forgatása koordinátára"
 
 #: plugins/TelescopeControl/src/ui_slewDialog.h:291
 msgid "De&clination (J2000):"
-msgstr ""
+msgstr "&Deklináció (J2000):"
 
 #: plugins/TelescopeControl/src/ui_slewDialog.h:292
 msgid "&Right Ascension (J2000):"
-msgstr ""
+msgstr "&RA (J2000):"
 
 #: plugins/TelescopeControl/src/ui_slewDialog.h:293
 msgid "&Current object"
@@ -5262,7 +5277,7 @@ msgstr ""
 
 #: plugins/TelescopeControl/src/ui_slewDialog.h:307
 msgid "Configure &telescopes..."
-msgstr ""
+msgstr "&Távcsövek beállításai"
 
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:471
 msgid "Telescope Configuration"
@@ -5931,6 +5946,10 @@ msgid ""
 "objects, download such lists from the Internet or search the online Minor "
 "Planet and Comet Ephemeris Service (MPES)."
 msgstr ""
+"Lehetőség van üstökösök és kisbolygók adatainak importálására a Nemzetközi "
+"Csillagászati Unió (IAU) Minor Planet Center-e (%1) által használt "
+"formátumban. Lehet meglévő fájlt beolvasni; letölteni az internetről; vagy "
+"online keresni a Minor Planet and Comet Ephemeris Service (MPES) webhelyén."
 
 #: plugins/SolarSystemEditor/src/gui/SolarSystemManagerWindow.cpp:96
 msgid "Solar System Editor plug-in"
@@ -6001,6 +6020,10 @@ msgid ""
 "Solar System configuration.<br/>Note that adding a large number of objects "
 "may cause Stellarium to run slowly."
 msgstr ""
+"Jelölje ki a beolvasandó objektumokat. <i>Dőlt betűvel</i> vannak kiírva "
+"azok, amik már be vannak töltve. <b>Vastagítva</b> vannak azok a nevek, amik "
+"azonosak a Stellarium alapértelmezett Naprendszerbeli objektumaival. "
+"<br/>Megjegyzés: túl sok objektum lelassíthatja a program futását."
 
 #: plugins/SolarSystemEditor/src/ui_mpcImportWindow.h:531
 msgid "Overwrite existing objects"
