Launchpad automatic translations update.

--- a/po/stellarium/ckb.po
+++ b/po/stellarium/ckb.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2012-12-26 14:52+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-25 14:21+0000\n"
+"Last-Translator: daniel <d.danial42@yahoo.com>\n"
 "Language-Team: Kurdish (Sorani) <ckb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:50+0000\n"
-"X-Generator: Launchpad (build 16430)\n"
+"X-Launchpad-Export-Date: 2013-01-26 04:43+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -23,7 +23,7 @@ msgstr "نیوەڕۆ"
 
 #: src/core/modules/GridLinesMgr.cpp:568 src/ui_viewDialog.h:1176
 msgid "Ecliptic"
-msgstr ""
+msgstr "%"
 
 #: src/core/modules/GridLinesMgr.cpp:572 src/ui_viewDialog.h:1164
 msgid "Equator"
@@ -31,7 +31,7 @@ msgstr "هێڵی یەکسان"
 
 #: src/core/modules/GridLinesMgr.cpp:576 src/ui_viewDialog.h:1172
 msgid "Horizon"
-msgstr "ئاسۆی"
+msgstr "ئاسۆ"
 
 #: src/core/modules/GridLinesMgr.cpp:580
 msgid "Galactic Plane"
@@ -100,7 +100,7 @@ msgstr ""
 
 #: src/core/modules/Nebula.cpp:351
 msgid "Nebula"
-msgstr ""
+msgstr "پەڵە(تەم و مژی نێوان ئەستێرەکان)"
 
 #: src/core/modules/Nebula.cpp:354
 msgid "Planetary nebula"
