--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2012-11-16 12:05+0000\n"
+"PO-Revision-Date: 2013-01-25 18:43+0000\n"
 "Last-Translator: Juraj Kubica <Juraj.Kubica@seznam.cz>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-19 04:47+0000\n"
-"X-Generator: Launchpad (build 16430)\n"
+"X-Launchpad-Export-Date: 2013-01-26 04:43+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -203,7 +203,7 @@ msgstr "Predbežné označenie: %1"
 #: src/core/modules/StarWrapper.cpp:52 src/core/modules/StarWrapper.cpp:122
 #: src/translations.h:151
 msgid "star"
-msgstr ""
+msgstr "hviezda"
 
 #: src/core/modules/StarWrapper.cpp:57
 #, qt-format
@@ -217,7 +217,7 @@ msgstr "Zdanlivá magnitúda: <b>%1</b> (s extinkciou)"
 
 #: src/core/modules/StarWrapper.cpp:120
 msgid "double star"
-msgstr ""
+msgstr "dvojhviezda"
 
 #: src/core/modules/StarWrapper.cpp:128 plugins/Quasars/src/Quasar.cpp:100
 #, qt-format
@@ -1238,27 +1238,27 @@ msgstr "Západ"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr ""
+msgstr "planéta"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
 msgid "comet"
-msgstr ""
+msgstr "kométa"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:157
 msgid "asteroid"
-msgstr ""
+msgstr "planétka"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
 msgid "moon"
-msgstr ""
+msgstr "mesiac"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:161
 msgid "plutoid"
-msgstr ""
+msgstr "plutino"
 
 #: src/translations.h:165
 msgid "Arabic"
@@ -1404,7 +1404,7 @@ msgstr "Zákryt Zeme a Jupitera v r. 2048"
 #. TRANSLATORS: Name of script
 #: src/translations.h:228
 msgid "3 Transits and 2 Eclipses from Deimos 2027"
-msgstr ""
+msgstr "3 prechody a 2 zatmenia z Deimosu v r. 2027"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:230
@@ -1525,6 +1525,11 @@ msgid ""
 "emerges from Mars it is still eclipsed and dimmed in Mars' shadow, only to "
 "light up later."
 msgstr ""
+"Mesiac Fobos predbieha Mars a prechádza cez slnečný kotúč, potom cúva naspäť "
+"k slnku a opäť čiastočne prejde cez kotúč (viditeľné len z južnej pologule "
+"Deimosu), potom mars celkom zakryje slnko a Fobos prejde v tieni medzi "
+"Marsom a Deimosom. Keď Fobos opäť vyjde spoza Marsu, stále je ešte zatienený "
+"Marsom, ale po chvíli ho zaleje slnečný svit."
 
 #: src/translations.h:260
 msgid ""
@@ -2555,7 +2560,7 @@ msgstr "Pridať hviezdny rok"
 
 #: src/translations.h:523
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Pripočítať 1 siderické storočie"
 
 #: src/translations.h:524
 msgid "Add 1 solar day"
@@ -2595,7 +2600,7 @@ msgstr "Pripočítaj 1 stredný tropický rok"
 
 #: src/translations.h:533
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Pripočítať 1 stredné tropické storočie"
 
 #: src/translations.h:534
 msgid "Slow down the script execution rate"
@@ -2667,7 +2672,7 @@ msgstr "Ubrať hviezdny rok"
 
 #: src/translations.h:551
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Odpočítať 1 siderické storočie"
 
 #: src/translations.h:552
 msgid "Subtract 1 solar day"
@@ -2707,7 +2712,7 @@ msgstr "Odpočítaj 1 stredný tropický rok"
 
 #: src/translations.h:561
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Odpočítať 1 stredné tropické storočie"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:564
@@ -4517,7 +4522,7 @@ msgstr "Medzinárodný identifikátor"
 
 #: plugins/Satellites/src/Satellite.cpp:244
 msgid "artificial satellite"
-msgstr ""
+msgstr "umelá družica"
 
 #. TRANSLATORS: Slant range: distance between the satellite and the observer
 #: plugins/Satellites/src/Satellite.cpp:254
@@ -6672,23 +6677,23 @@ msgstr "Aktualizovať dáta exoplanét z internetu"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "Režim zobrazenia exoplanét"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "Zobraziť všetky sústavy s exoplanétami bez popisky"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "Zobraziť rozloženie exoplanét"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
-msgstr ""
+msgstr "Zobraziť exoplanéty od ich objavu"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:268
 msgid "Enable timeline discovery of exoplanets"
-msgstr ""
+msgstr "Zobraziť časovú os objavov exoplanét"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
@@ -6944,13 +6949,15 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:152
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:232
 msgid "Horizon altitude:"
-msgstr ""
+msgstr "Výška horizontu:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
 "Minimum observable altitude (due to mountains, buildings, or just a limited "
 "telescope mount)."
 msgstr ""
+"Najmenšia pozorovateľná výška (kvôli kopcom, budovám, alebo obmedzeniam "
+"montáže ďalekohľadu)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Today ephemeris:"
@@ -7125,15 +7132,15 @@ msgstr "Veľkosť písma"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:375
 msgid "Observing conditions"
-msgstr ""
+msgstr "Pozorovacie podmienky"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:376
 msgid "Horizon altitude: 0 deg."
-msgstr ""
+msgstr "Výška horizontu: 0 stupňov."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:377
 msgid "Sun altitude at twilight: 0 deg."
-msgstr ""
+msgstr "Výška slnka pri úsvite: 0 stupňov."
 
 #~ msgid "Cardinal Points"
 #~ msgstr "Svetové strany"
